===============
Stalker Changes
===============

0.2.6.2
=======

* **Fix:** Fixed ``stalker.models.studio.schedule()`` method, and prevented it
  to call ``DBSession.commit()`` which causes errors if there is a transaction
  manager.

0.2.6.1
=======

* **New:** ``stalker.models.task.TimeLog`` instances are now checking if the
  dependency relation between the task that receives the time log and the tasks
  that the task depends to will be violated in terms of the start and end dates
  and raises a ``DependencyViolationError`` if it is the case.

0.2.6
=====

* **New:** Added ``stalker.models.wiki.Page`` class, for holding a per Project
  wiki.

0.2.5.5
=======

* **Fix:** ``Review.task`` attribute now accepts None but this is mainly done
  to allow its relation to the ``Task`` instance can be broken when it needs to
  be deleted without issuing a database commit.

0.2.5.4
=======

* **Update:** The following column names are updated:
  
  * ``Tasks._review_number`` to ``Tasks.review_number``
  * ``Tasks._schedule_seconds`` to ``Tasks.schedule_seconds``
  * ``Tasks._total_logged_seconds`` to ``Tasks.total_logged_seconds``
  * ``Reviews._review_number`` to ``Reviews.review_number``
  * ``Shots._cut_in`` to ``Shots.cut_in``
  * ``Shots._cut_out`` to ``Shots.cut_out``
  
  Also updated alembic migration to create columns with those names.

* **Update:** Updated Alembic revision ``433d9caaafab`` (the one related with
  stalker 2.5 update) to also include following updates:
  
  * Create StatusLists for Tasks, Asset, Shot and Sequences and add all the
    Statuses in the Task Status Workflow.
  * Remove ``NEW`` from all of the status lists of Task, Asset, Shot and
    Sequence.
  * Update all the ``PREV`` tasks to ``WIP`` to let them use the new Review
    Workflow.
  * Update the ``Tasks.review_number`` to 0 for all tasks.
  * Create StatusLists and Statuses (``NEW``, ``RREV``, ``APP``) for Reviews.